syntax = "proto3";
package protobuf.tcp;
message RPCTestC{
	string name=1;
}
message RPCTestS{
	string name=1;
}